# music-dl

./: .gitignore  LICENSE  README.md  install.ps1  pyproject.toml  requirements.txt  ym.cmd  ym.ps1  ym_download.py
.cursor/rules/: architecture.mdc  python-standards.mdc
docs/: ROADMAP.md
music_dl/: __init__.py  __main__.py  console.py  constants.py
music_dl/cli/: main.py  parser.py
music_dl/cli/commands/: auth.py  download.py  pick.py
music_dl/core/: cancel.py  config.py  filenames.py  models.py
music_dl/pipeline/: failed_log.py  jobs.py  runner.py  tags.py
music_dl/providers/: base.py  registry.py
music_dl/providers/yandex/: artist.py  auth.py  loaders.py  metadata.py  patterns.py  provider.py  targets.py  track_download.py
